1. Implemented PairedDiagnosticsActivity 2. Made extra parameters with side and distance

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,13 +20,16 @@
 
 <!--    distances-->
     <string-array name="distances">
-        <item>5 м.</item>
-        <item>4,5 м.</item>
-        <item>4 м.</item>
-        <item>3,5 м.</item>
-        <item>3 м.</item>
-        <item>2,5 м.</item>
+        <item>5 м</item>
+        <item>4.5 м</item>
+        <item>4 м</item>
+        <item>3.5 м</item>
+        <item>3 м</item>
+        <item>2.5 м</item>
     </string-array>
+
+    <string name="result_percentage">%s %%</string>
+    <string name="result_side">Острота зрения %s глаза</string>
 
     <!--    diagnostics resources-->
     <string name="diagnostic_alphabet">ШБМНКЫИ</string>
